fixing overlapping text in the category tree in the catalog component
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1082417 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/catalog/categorytree.css
+++ b/framework/images/webapp/images/catalog/categorytree.css
@@ -20,9 +20,11 @@
 /* THE CUSTOM CSS FOR AJUST THE CATEGORY TREE */
 .jstree-default a { 
 white-space:normal !important;
-height: auto;
 }
 .jstree-default .jstree-leaf > ins { 
 background-position:-36px 0;
 vertical-align: top;
+}
+body:nth-of-type(1) .jstree-default a {
+height: auto;
 }
